--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':itemtouchhelperextension')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':itemtouchhelperextension')
     implementation libs.appcompatV7
     implementation libs.design
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    //Room DB
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
